--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png" />
+    <link rel="manifest" href="image/site.webmanifest" />
     <title>You're Invited – 40th Birthday Bash</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;700&display=swap"
@@ -164,9 +168,10 @@
         </button>
         <h2 id="mapTitle">Venue Location</h2>
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.0860660839816!2d144.9630583156107!3d-37.81410797975159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf5775b2e3e1608a7!2sFederation+Square!5e0!3m2!1sen!2sau!4v1615696079474!5m2!1sen!2sau"
-          allowfullscreen
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6304.760971147581!2d144.89670225141694!3d-37.804555961466654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d8e97d04c91%3A0x8838acce622235fd!2sStation%20Hotel!5e0!3m2!1sen!2sau!4v1744973498835!5m2!1sen!2sau"
+          allowfullscreen=""
           loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </div>
     </div>
