--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <main class="container" role="main">
         <h1>Let's Party!</h1>
         <p class="info">
-          Join us for some fun, laughter, and celebration as Jamie turns 40!
+          Join us for some nibbles, drinks and good times as Jamie turns 40!
         </p>
         <p class="date-display">13 / 07 / 2025</p>
         <p class="info">2PM to 5PM</p>
